padding on mobile fixed

--- a/src/index.css
+++ b/src/index.css
@@ -192,7 +192,7 @@ p {
 
 @media (max-width: 600px) {
     .centerContentScreen, #display {
-        padding: 0;
+        padding: 1rem 0 1rem 0;
     }
     .noResults {
         width: 100%;
